--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,7 +88,7 @@ jobs:
       - name: Update phpunit.xml with DATABASE_URL
         working-directory: ./backend
         run: |
-          cp phpunit.xml.dist phpunit.xml
+          cp phpunit.dist.xml phpunit.xml
           
           # Ajouter DATABASE_URL dans la section <php>
           sed -i '/<php>/a \        <env name="DATABASE_URL" value="mysql://root:password@127.0.0.1:3306/symfony_test?serverVersion=mariadb-10.6.0&amp;charset=utf8mb4"/>' phpunit.xml
