--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - ./frontend/src:/app/src
       - ./frontend/index.html:/app/index.html
       - ./frontend/vite.config.ts:/app/vite.config.ts
+      - ./frontend/public:/app/public
     environment:
       - VITE_API_BASE_URL=https://api.defifullstack.com
     command: npm run dev -- --host 0.0.0.0
@@ -29,6 +30,7 @@ services:
       - ./backend/config:/app/config
       - ./backend/public:/app/public
       - ./backend/tests:/app/tests
+      - ./backend/reports:/app/reports
     environment:
       - SERVER_NAME=:8000
       - DATABASE_URL=mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@db:3306/${MYSQL_DATABASE}?charset=utf8mb4&serverVersion=mariadb-10.6.0
