--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,11 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.17",
+    "axios": "^1.13.2",
+    "chart.js": "^4.5.1",
+    "fuse.js": "^7.1.0",
+    "tailwindcss": "^4.1.17",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3"
   },
