--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,6 @@
     "chart.js": "^4.5.1",
     "fuse.js": "^7.1.0",
     "tailwindcss": "^4.1.17",
-    "vue": "^3.5.25",
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
@@ -31,6 +30,7 @@
     "@types/node": "^24.10.1",
     "@vitejs/plugin-vue": "^6.0.2",
     "@vitejs/plugin-vue-jsx": "^5.1.2",
+    "@vitest/coverage-v8": "^4.0.15",
     "@vitest/eslint-plugin": "^1.5.0",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.6.0",
@@ -39,13 +39,14 @@
     "eslint": "^9.39.1",
     "eslint-plugin-vue": "~10.5.1",
     "jiti": "^2.6.1",
-    "jsdom": "^27.2.0",
+    "jsdom": "^27.3.0",
     "npm-run-all2": "^8.0.4",
     "prettier": "3.6.2",
     "typescript": "~5.9.0",
     "vite": "^7.2.4",
     "vite-plugin-vue-devtools": "^8.0.5",
-    "vitest": "^4.0.14",
+    "vitest": "^4.0.15",
+    "vue": "^3.5.25",
     "vue-tsc": "^3.1.5"
   }
 }
