--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,7 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     volumes:
-      - ./frontend/src:/app/src
-      - ./frontend/index.html:/app/index.html
-      - ./frontend/vite.config.ts:/app/vite.config.ts
-      - ./frontend/public:/app/public
+      - ./frontend/*:/app
     environment:
       - VITE_API_BASE_URL=http://localhost:8000
     command: npm run dev -- --host 0.0.0.0
