--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -224,3 +224,4 @@ jobs:
         with:
           node-version: '23'
           cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
