--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -225,3 +225,11 @@ jobs:
           node-version: '23'
           cache: 'npm'
           cache-dependency-path: frontend/package-lock.json
+
+      - name: Install dependencies
+        working-directory: ./frontend
+        run: npm ci
+
+      - name: Run Vitest
+        working-directory: ./frontend
+        run: npm run test:ci
