--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -232,4 +232,4 @@ jobs:
 
       - name: Run Vitest
         working-directory: ./frontend
-        run: npm run test:ci
+        run: npm run test:unit
