--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,12 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     volumes:
-      - ./frontend/*:/app
+      - ./frontend/src:/app/src
+      - ./frontend/index.html:/app/index.html
+      - ./frontend/vite.config.ts:/app/vite.config.ts
+      - ./frontend/public:/app/public
+      - ./frontend/coverage:/app/coverage
+      - ./frontend/.env:/app/.env
     environment:
       - VITE_API_BASE_URL=http://localhost:8000
     command: npm run dev -- --host 0.0.0.0
