fix : tests + CI-CD

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -222,6 +222,13 @@ jobs:
         run: |
           vendor/bin/phpcs --standard=PSR12 src
 
+      - name: Run PHP-CS-Fixer
+        working-directory: ./backend
+        run: |
+          vendor/bin/php-cs-fixer fix src
+          
+      
+
   # ----------------------------
   # Frontend Vue.js / Vitest
   # ----------------------------
