--- a/backend/composer.json
+++ b/backend/composer.json
@@ -49,6 +49,7 @@
         "phpstan/phpstan-beberlei-assert": "^2.0",
         "phpunit/php-code-coverage": "^12.5",
         "phpunit/phpunit": "^12.4",
+        "squizlabs/php_codesniffer": "^4.0",
         "symfony/browser-kit": "7.4.*",
         "symfony/http-client": "7.4.*",
         "symfony/maker-bundle": "^1.65",
