--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -223,10 +223,10 @@ jobs:
           vendor/bin/phpcs --standard=PSR12 src
 
       - name: Run PHP-CS-Fixer
-        continue-on-error: true
         working-directory: ./backend
+        continue-on-error: true
         run: |
-          vendor/bin/php-cs-fixer fix src --dry-run --diff
+          vendor/bin/php-cs-fixer fix src --dry-run --diff || true
           
       
 
