--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -215,18 +215,24 @@ jobs:
 
       - name: Run PHPStan
         working-directory: ./backend
-        run: vendor/bin/phpstan analyse src
+        run: vendor/bin/phpstan analyse src --error-format=github
 
       - name: Run PHPCS
         working-directory: ./backend
         run: |
           vendor/bin/phpcs --standard=PSR12 src
 
-      - name: Run PHP-CS-Fixer
+      - name: Run PHP-CS-Fixer (check)
         working-directory: ./backend
-        run: |
-          vendor/bin/php-cs-fixer fix src --dry-run --diff || true
-          vendor/bin/php-cs-fixer fix src --dry-run --diff --format=json > php-cs-fixer-report.json || true
+        continue-on-error: true
+        run: vendor/bin/php-cs-fixer fix src --dry-run --diff
+
+      - name: Generate PHP-CS-Fixer JSON report
+        working-directory: ./backend
+        continue-on-error: true
+        run: vendor/bin/php-cs-fixer fix src --dry-run --diff --format=json > php-cs-fixer-report.json
+
+
       - name: Upload PHP-CS-Fixer report
         uses: actions/upload-artifact@v4
         with:
